<resources>
    <string name="app_name">Мои Привычки</string>
    <string name="action_settings">Settings</string>
    <string name="action_hide">Скрыть</string>
    <string name="cancel">Отмена</string>
    <string name="done_progress_start">Начало:</string>
    <string name="done_progress_continion">Продолжительность:</string>
    <string name="done_progress_rezult">Прогресс:</string>
    <string name="done_progress_predict">Прогноз:</string>
    <string name="action_finish">Завершить</string>
    <string name="add_sheduler_first_title_radioButtonEveryDay">Каждый день</string>
    <string name="add_sheduler_first_title_radioButtonAfterDay">Каждый N  день</string>
    <string name="add_sheduler_first_title_radioButtonChooseDay">Выбрать дни</string>
    <string name="add_sheduler_first_title_radioButtonCountDay">Количество дней в неделю</string>
    <string name="add_sheduler_first_title_checkBox">Добавить напоминания</string>
    <string name="brif_item_last_date">Последняя дата выполнения</string>
    <string name="add_sheduler_first_title_switch">Не более 1 раза в день</string>
    <string name="week_monday">Понедельник</string>
    <string name="week_tuesday">Вторник</string>
    <string name="week_wednesday">Среда</string>
    <string name="week_friday">Пятница</string>
    <string name="week_saturday">Суббота</string>
    <string name="week_thursday">Четверг</string>
    <string name="week_suday">Воскресенье</string>
    <string name="week_monday_brif">Пн</string>
    <string name="week_tuesday_brif">Вт</string>
    <string name="week_wednesday_brif">Ср</string>
    <string name="week_friday_brif">Пт</string>
    <string name="week_saturday_brif">Сб</string>
    <string name="week_thursday_brif">Чт</string>
    <string name="week_suday_brif">Вс</string>
    <string name="action_change">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="action_unhide">Показать</string>
    <string name="action_list">Сортировать по дню выполнения</string>
    <string name="done_progress_sheduler">Расписание</string>
    <string name="done_progress_next">Следущая Активность</string>
    <string name="app_briff">Активные Привычки</string>
    <string name="app_add_hobby">Добавить</string>
    <string name="add_hobby_title_hint">Название Цели</string>
    <string name="add_hobby_descripton_hint">Можете дать краткое описание вашей цели. Минимальный и максимальный дневной план. А так же что вас мотивирует</string>
    <string name="title_activity_generator">GeneratorActivity</string>
    <string name="add_hobby_notty">Добавить напоминание</string>
    <string name="main_activity_lable_duration_status0">Цель в работе:</string>
    <string name="main_activity_lable_duration_status2">Цель в работе была:</string>
    <string name="main_activity_is_restore_finish">Завершенно, Хотите возобновить?</string>
    <string name="main_activity_yes">да</string>
    <string name="start_today">Начни Сегодня :)</string>
    <string name="done_hobby_fragment_result_0">Серьезно??? Сделай хоть чуть чуть!!!</string>
    <string name="text_progress_result_dialog">Прогресс +</string>
    <string name="confirm_finish">Уверенны что вы закрепили привычку?</string>
    <string name="remained">/Осталось %2d</string>
    <string name="notifytitle">Стань Лучше</string>
    <string name="action_info">Инфо</string>
    <string name="action_generator">Генератор</string>
    <string name="graf_title_by_count">График активности очков прогресса(недельный)</string>
    <string name="graf_title_by_day">График активности по дням(недельный)</string>
    <string name="action_graph">График</string>
    <string name="description">Описание:</string>
    <string name="done">Выполнено!</string>
    <string name="add_hobby_is_save">Сохранить?</string>
    <string name="add_hobby_input_data">Выберите дату начала</string>
    <string name="add_hobby_input_old_count">Добавьте уже набранные очки</string>
    <string name="add_hobby_is_hobby_old">Желаете продолжить уже ранее начатую Привычку</string>
    <string name="add_hobby_error_time">Дата должна быть из прошлого</string>
    <string name="add_hobby_error_old_count">Укажите количество очков прогресса для востановленной Привычки</string>
</resources>
